app/assets/stylesheets/doctor/main.scss
/* ... */
.rect_1024:after {
  position: absolute;
  top: 0;
  bottom: 0;
  left: $rectWidth/2;
  width: 1px;
  content: '';
  background: red;
}

.profile_tab_controls {
  border-top: 1px solid #d3d3d3;

  @include respond-to-min($desktop) {
    position: fixed;
    background: rgba(255, 255, 255, .9);
    z-index: 3;
    right: 0;
    bottom: 0;
    left: 0;
    min-height: 50px;
  }

  @include respond-to-max($desktop) {
    .section_inner {
      padding: 10px 0;
    }
  }
}

.form_controls {
  @extend %clearfix;
  line-height: 50px;
  max-width: 720px;
  margin: 0 auto;

  .fl {
    padding-right: 20px;
  }
}

.write_form_controls {
  @extend %clearfix;
  padding: 0 10px;
  line-height: 48px;
  min-height: 50px;
}

.mob_hidden {
  @include respond-to-max($desktop) {
    display: none !important;
  }
}

.dt_hidden {
  @include respond-to-min($desktop) {
    display: none !important;
  }
}

#ui-datepicker-div {
  display: none;
}

//  todo remove

#chromeperfectpixel-panel {
  max-width: 100vw !important;
  left: 0 !important;
  top: 38px !important;
}

#chromeperfectpixel-panel.collapsed {
  right: auto !important;
  bottom: auto !important;
  display: block !important;
}

#chromeperfectpixel-panel #chromeperfectpixel-layers {
  max-height: 30vh !important;
  overflow: auto !important;
}

#chromeperfectpixel-panel .chromeperfectpixel-layer {
  margin-right: 1px !important;
}

#chromeperfectpixel-ad {
  display: none !important;
}

.timeline {
  position: absolute;
  left: 59px;
  border: none;
  border-top: 1px solid red;
  width: 100%;
  margin: 0;
  padding: 0;
  z-index: 999;
}
.ui-dialog {
  z-index: 9999 !important;
}
.ui-autocomplete {
  z-index: 10000 !important;
}
.ui-autocomplete {
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1000;
  float: left;
  display: none;
  min-width: 160px;
  _width: 160px;
  padding: 4px 0;
  margin: 2px 0 0 0;
  list-style: none;
  background-color: #ffffff;
  border-color: #ccc;
  border-color: rgba(0, 0, 0, 0.2);
  border-style: solid;
  border-width: 1px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  -webkit-background-clip: padding-box;
  -moz-background-clip: padding;
  background-clip: padding-box;
  *border-right-width: 2px;
  *border-bottom-width: 2px;

  /* .ui-menu-item > a.ui-corner-all { */
  .ui-menu-item > a.ui-menu-item-wrapper {
    display: block;
    padding: 3px 15px;
    clear: both;
    font-weight: normal;
    line-height: 18px;
    color: #555555;
    white-space: nowrap;

    &.ui-state-hover, &.ui-state-active {
      color: #ffffff;
      text-decoration: none;
      background-color: #0088cc;
      border-radius: 0px;
      -webkit-border-radius: 0px;
      -moz-border-radius: 0px;
      background-image: none;
    }
  }
}

.form_input.completed {
  background-color: #eeeeff;
}

